--- a/MAT381E_Syllabus.tex
+++ b/MAT381E_Syllabus.tex
@@ -339,7 +339,7 @@ be conducted.
     \item
       Project website on GitHub pages 5\%,
     \item
-      Project oral presentation 20\%,
+      Project final oral presentation 20\%,
     \item
       Peer evaluation 5\%,
     \item
