--- a/MAT381E_Syllabus.tex
+++ b/MAT381E_Syllabus.tex
@@ -169,9 +169,10 @@ schedule given below. However, weekly class schedules are subject to
 change depending on the progress we make as a class.
 
 \begin{longtable}[]{@{}
-  >{\centering\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.23}}
-  >{\centering\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.23}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.55}}@{}}
+  >{\centering\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.14}}
+  >{\centering\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.14}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.51}}
+  >{\centering\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.22}}@{}}
 \toprule
 \begin{minipage}[b]{\linewidth}\centering
 \textbf{Week}
@@ -179,29 +180,34 @@ change depending on the progress we make as a class.
 \textbf{Date}
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 \textbf{Topic}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+\textbf{Github Repo}
 \end{minipage} \\
 \midrule
 \endhead
-1 & 04/10 & Introduction to data science and computational tools. \\
-2 & 11/10 & Tools for data importing, manipulating, and tidying. \\
-3 & 18/10 & Basic principles of data visualization. \\
-4 & 25/10 & Data visualization tools. \\
+1 & 04/10 & Introduction to data science and computational tools.
+\textbf{(Project proposal assigned)} &
+\href{https://github.com/MAT381E-Fall21/Week_1_Lecture_Notes}{🔗} \\
+2 & 11/10 & Tools for data importing, manipulating, and tidying. &
+\href{https://github.com/MAT381E-Fall21/Week_2_Lecture_Notes}{🔗} \\
+3 & 18/10 & Basic principles of data visualization. & \\
+4 & 25/10 & Data visualization tools. & \\
 5 & 01/11 & Handling with strings and dates in data. \textbf{(HW1
-assigned, Project proposal submission)} \\
-6 & 08/11 & Scraping data from web. \\
-7 & 15/11 & Data extraction from social networking sites. \\
-8 & 22/11 & ITU Fall Break. \\
+assigned, Project proposal submission)} & \\
+6 & 08/11 & Scraping data from web. & \\
+7 & 15/11 & Data extraction from social networking sites. & \\
+8 & 22/11 & ITU Fall Break. & \\
 9 & 29/11 & Basic principles of text mining. \textbf{(Project interim
-report submission)} \\
-10 & 06/12 & Network analysis and visualization. \\
-11 & 13/12 & Basic principles of geographic information system. \\
+report submission)} & \\
+10 & 06/12 & Network analysis and visualization. & \\
+11 & 13/12 & Basic principles of geographic information system. & \\
 12 & 20/12 & Visualization of spatial and urban data. \textbf{(HW2
-assigned)} \\
-13 & 27/12 & Basic principles of interactive data visualization. \\
-14 & 03/01 & Interactive web-based data visualization tools. \\
-15 & 10/01 & Relational databases. \\
+assigned)} & \\
+13 & 27/12 & Basic principles of interactive data visualization. & \\
+14 & 03/01 & Interactive web-based data visualization tools. & \\
+15 & 10/01 & Relational databases. & \\
 16-17 & 17-30/01 & Final exam week. \textbf{(Final report submission,
-Project website on GitHub pages, Oral presentation)} \\
+Project website on GitHub pages, Oral presentation)} & \\
 \bottomrule
 \end{longtable}
 
