--- a/MAT381E_Syllabus.Rmd
+++ b/MAT381E_Syllabus.Rmd
@@ -91,6 +91,12 @@ However, weekly class schedules are subject to change depending on the progress 
 | 15 | 10/01| Relational databases. | |
 | 16-17 | 17-30/01| Final exam week. **(Final report submission, Project website on GitHub pages, Oral presentation)** | |
 
+
+**Additional <i class="fab fa-github"></i> Repositories**
+
+ - [Git/GitHub/RStudio usage](https://github.com/MAT381E-Fall21/git_github_rstudio_usage_guide).
+
+
 **Student Learning Outcomes:** A student who completed this course successfully is expected to: 
 
 1.	Know the recent technologies associated with data science,
