--- a/MAT381E_Syllabus.Rmd
+++ b/MAT381E_Syllabus.Rmd
@@ -47,7 +47,7 @@ Data science is an interdisciplinary and broad field using mathematics, statisti
 
 We will be using `R` programming language with `RStudio IDE` for data related works. You will prepare your all works (reports and presentations) in `R Markdown`, which closely follows `Markdown` syntax. 
 You will also be using the version control system `Git` along with `GitHub` to submit homework assignments and
-team-based works. You will publish your final project on `GitHub pages`. Lastly, prior knowledge of `HTML`, `CSS`, and `JavaScript` brings a big plus to produce fancy outputs for your works. But it is neither a must nor focus of this course.
+team-based works through `GitHub classroom` of our course. You will publish your final project on `GitHub pages`. Lastly, prior knowledge of `HTML`, `CSS`, and `JavaScript` brings a big plus to produce fancy outputs for your works. But it is neither a must nor focus of this course.
 
 **Course website:** For each study, you will also receive an invitation soon to submit your study to the `GitHub Classroom` of the following organization:
 
