--- a/project.Rmd
+++ b/project.Rmd
@@ -4,6 +4,32 @@ description: |
   Course final projects will be here soon!
 ---
 
+# Project Design Guideline
+
+In MAT381E: Introduction to Data Science course, you, as a group of 2, are expected to develop a data science project motivated by one of the topics related to, but not limited to:
+
+* Animals,
+* Children, 
+* Clean energy,
+* Clean water,
+* Climate,
+* Education,
+* Food security,
+* Gender equality,
+* Good health and well-being,
+* Hunger,
+* Natural hazards (geophysical (e.g., earthquakes), hydrological (e.g., floods), climatological (e.g., droughts and wildfires), meteorological, or biological (e.g., disease epidemics), 
+* Poverty,
+* Sustainable & accessible cities and communities,
+* Responsible consumption & production,
+* Reduced inequalities & refugees,
+* Peace & justice & human rights, and
+* People with disabilities.
+
+Some of these topics are also within the scope of sustainable development goals of United Nations for a better future for our world (https://www.un.org/sustainabledevelopment/sustainable-development-goals/). Feel free to ask for help from your peers who have domain knowledge and data expertise on these topics (and of course, do not forget to thank them at the end of your project).
+
+The main aim of developing a project is to find an open-source data related to the topics mentioned above and then to use basic data science tools (data importing, cleaning, re-shaping, exploring, and visualization techniques) to touch one of societal problems in our world and let their voice be heard by people via posting your project on the web (e.g., GitHub pages). 
+
 # Project Team Information
 
 Project team members and their project titles are listed below. Details will be available soon.
