--- a/index.Rmd
+++ b/index.Rmd
@@ -235,3 +235,8 @@ Sharing the lecture recordings or its piece with third parties is strictly forbi
 https://online.itu.edu.tr/,
 
 for more information on distance education regulations at ITU.
+
+## Acknowledgement
+
+This course could not be possible without [ITU-Zoom](https://itu-edu-tr.zoom.us/), [ITU-Ninova](https://ninova.itu.edu.tr/tr/), [RStudio](https://www.rstudio.com/) along with all open-source packages, [GitHub](https://github.com/), [GitHub Classroom](https://classroom.github.com/) and generous support of [Data Camp](https://www.datacamp.com/). 
+The course web site is built on [Distill for R Markdown](https://rstudio.github.io/distill/).
