--- a/index.Rmd
+++ b/index.Rmd
@@ -239,6 +239,5 @@ for more information on distance education regulations at ITU.
 ## Acknowledgement
 
 This course could not be possible without [ITU-Zoom](https://itu-edu-tr.zoom.us/), [ITU-Ninova](https://ninova.itu.edu.tr/tr/), [RStudio](https://www.rstudio.com/) along with all open-source packages, [GitHub](https://github.com/), [GitHub Classroom](https://classroom.github.com/) and generous support of [Data Camp](https://www.datacamp.com/). 
-The course web site is built on [Distill for R Markdown](https://rstudio.github.io/distill/).
 The course slides are prepared with [R xaringan](https://github.com/yihui/xaringan) along with
-[R xaringan extra](https://github.com/gadenbuie/xaringanExtra).
+[R xaringan extra](https://github.com/gadenbuie/xaringanExtra). The course web site is built on [Distill for R Markdown](https://rstudio.github.io/distill/).
